# asciidoxide

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc  README.md
.github/workflows/: ci.yml
benches/: parser.rs
crates/lsp/: Cargo.toml  README.adoc
crates/lsp/src/: backend.rs  definition.rs  diagnostics.rs  document.rs  folding.rs  hover.rs  lib.rs  main.rs  symbols.rs  util.rs
crates/parser/: Cargo.toml  README.adoc
crates/parser/benches/: parser.rs
crates/parser/src/: diagnostic.rs  lib.rs
crates/parser/src/parser/: mod.rs
crates/parser/src/parser/block/: mod.rs  transform.rs
crates/parser/src/parser/block/boundary/: compound.rs  lists.rs  metadata.rs  mod.rs  sections.rs  table.rs  verbatim.rs
crates/parser/src/parser/inline/: passthrough.rs  span.rs
crates/parser/src/preprocess/: expression.rs  mod.rs
crates/parser/tests/: tck.rs  tck_harness.rs
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/asciidoc/: config.toml  highlights.scm  injections.scm
editors/zed/languages/asciidoc_inline/: config.toml  highlights.scm  injections.scm
editors/zed/src/: lib.rs
scripts/: asciidoctor-tck-adapter.rb
src/: asg.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
src/parser/: block.rs  inline.rs  mod.rs
src/parser/block/: attributes.rs  boundary.rs  breaks.rs  chumsky_blocks.rs  chumsky_parser.rs  combinators.rs  comments.rs  delimited.rs  lists.rs  metadata.rs  mod.rs  paragraphs.rs  raw_block.rs  sections.rs  transform.rs
src/parser/block/boundary/: breaks.rs  compound.rs  macros.rs  metadata.rs  mod.rs  sections.rs  utility.rs  verbatim.rs
src/parser/inline/: macros.rs  mod.rs  passthrough.rs  span.rs
src/preprocess/: conditional.rs  directive.rs  mod.rs
tests/: tck.rs  tck_harness.rs
