[package]
name = "asciidoc"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
asciidoc = { path = ".", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
