[package]
name = "asciidoxide"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
chumsky = "0.12"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codspeed-criterion-compat = "4.3"
criterion = { version = "0.8" }

[[test]]
name = "tck_harness"
harness = false

[[bench]]
name = "parser"
harness = false
